<resources>
    <string name="app_name">Cartoon Photo Editor</string>
    <string name="app_name_split">Cartoon</string>
    <string name="app_name_split2">Photo Editor</string>
    <string name="home_header">AI Art Effect</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="gallery_access_ask">Grant permission to access photos from gallery here!</string>
    <string name="free_trial_label">Free Trial</string>
    <string name="allow_access_label">Allow Access</string>
    <string name="open_settings">Allow from Settings</string>
    <string name="save_label">Save</string>
    <string name="visit_label">Visit</string>
    <string name="view_label">Beautiful Cartoon</string>
    <string name="share_label">Share</string>
    <string name="filter_label">Apply Filter</string>
    <string name="after_edit_label">Cartoon From Filter</string>
    <string name="cancel_label">Cancel</string>
    <string name="crop_image_label">Crop Image</string>
    <string name="buy_label">Access to all features</string>
    <string name="trial_label">3 Days Free Trial</string>
    <string name="continue_label">Continue</string>
    <string name="splash_label">Make the most attractive \n visualization in your images</string>
    <string name="splash_label2">By Tapping “Continue” you confirm that \n you agree with our</string>
    <string name="stylish_cartoon_label">Stylish Cartoon</string>
    <string name="maker_label">Maker</string>
    <string name="user_agreement_label">User Agreement</string>
    <string name="accept_agreement_label">Accept and continue</string>
    <string name="search_lang_label">Search Country Language</string>
    <string name="saved_file_label">Saved</string>
    <string name="access_to_photos_label">Access to Photos</string>
    <string name="edit_label">Edit</string>
    <string name="convert_label">Convert</string>
    <string name="ok_label">OK</string>
    <string name="upload_image_message">Please wait while we upload your picture \n to apply the filter.</string>
    <string name="upload_image_header">Uploading Image</string>
    <string name="finalising_msg">Our AI is processing your picture to apply the filter. This process may take a little time</string>
    <string name="finalising_header">Finalising</string>
    <string name="cartoon_maker_header">AI Cartoon Photo Editor</string>
    <string name="con_error_msg">An error occurred! Please try again after few moments</string>
    <string name="limit_exceeded_msg">The limit for processing has been exceeded. Please try again later</string>
    <string name="loading_header">Loading Filters</string>
    <string name="loading_msg">We\'re preparing a selection of filters to enhance your picture. This may take a moment.</string>
    <string name="exit_warning_msg">Are you sure you want to exit without saving? Your changes will not be saved, and any unsaved progress will be lost.</string>
    <string name="filters_label">Filters</string>
    <string name="no_converted_msg">Oops! It looks like you haven\'t converted and saved any pictures yet.</string>
    <string name="saved_files_header">Saved Files</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="del_img_header">Delete Image</string>
    <string name="del_img_msg">Do you want to delete this converted image?</string>
    <string name="del_img_success_msg">Photo deleted successfully</string>
    <string name="remove_ads_label">Remove Ads</string>
    <string name="get_features_label">Get All Premium Features</string>
    <string name="get_filters_label">Get Unlimited Filters</string>
    <string name="vip_channel_label">VIP Exclusive Channel</string>
    <string name="get_unlimited_access_label">Get Unlimited Access</string>
    <string name="get_access_body">Get access to all our features</string>
    <string name="monthly_label">Monthly</string>
    <string name="price_label">$4.99</string>
    <string name="price_label_2" translatable="false">$9.99</string>
    <string name="cancel_anytime_label">Cancel Anytime</string>
    <string name="com_soon">Coming Soon</string>
    <string name="cam_denied">Camera Access Denied</string>
    <string name="name_update">Name Updated</string>
    <string name="saved_gall">Saved to Gallery</string>
    <string name="exit_label">Exit</string>
    <string name="original_header">Original</string>
    <string name="discount_label">Save 50%</string>
    <string name="exit_dialog_msg"><![CDATA[If you want to make a profile photo with Cartoon Photo Editor, please explore & visit new trending AI Filters]]></string>
    <string name="delete_label">Delete</string>
    <string name="rename_label">Rename</string>
    <string name="rename_file_label">Rename File</string>
    <string name="eng_label">English</string>
    <string name="afrikaans_label">Afrikaans</string>
    <string name="arabic_label">Arabic</string>
    <string name="chinese_label">Chinese</string>
    <string name="czech_label">Czech</string>
    <string name="dutch_label">Dutch</string>
    <string name="french_label">French</string>
    <string name="german_label">German</string>
    <string name="greek_label">Greek</string>
    <string name="hebrew_label">Hebrew</string>
    <string name="hindi_label">Hindi</string>
    <string name="indo_label">Indonesian</string>
    <string name="italian_label">Italian</string>
    <string name="jap_label">Japanese</string>
    <string name="korean_label">Korean</string>
    <string name="malay_label">Malay</string>
    <string name="nor_label">Norwegian</string>
    <string name="per_label">Persian</string>
    <string name="port_label">Portuguese</string>
    <string name="russ_label">Russian</string>
    <string name="spanish_label">Spanish</string>
    <string name="thai_label">Thai</string>
    <string name="turk_label">Turkish</string>
    <string name="viet_label">Vietnamese</string>
    <string name="select_language_label">Select Language</string>
    <string name="select_label">Select</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="general_label">General</string>
    <string name="language_label">Language</string>
    <string name="others_label">Others</string>
    <string name="rate_us_label">Rate Us</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="feedback_label">Feedback</string>
    <string name="more_apps_label">More Apps</string>
    <string name="rename_err_msg">Name cannot be empty!</string>
    <string name="privacy_underlined_label"><u>Privacy Policy</u></string>
    <string name="share_title">Cartoon Photo Editor</string>
    <string name="share_body">Let me recommend you the best AI Cartoon Photo Editor app. Try it now!</string>
    <string name="share_header">Share via</string>
    <string name="details_label">For more, Visit our</string>
    <string name="user_agreement">Airport Flight Status is committed to protecting your privacy. Our guiding principle toward data collection is to collect only the minimal data required to operate a world-class app service at scale. We want you to understand what information we collect, what we don\'t collect, and how we collect, use, and store information.</string>
    <string name="user_agreement_para1">We do not collect logs of your activity, including no logging of browsing history, traffic destination, or DNS queries. We also never store connection logs, i.e., no logs of your IP address, your outgoing IP address, connection timestamp, or session duration. We designed our systems not to have sensitive data about you; even when compelled, we cannot provide data that we do not possess.</string>
    <string name="user_agreement_para2">This Privacy Policy (the "Privacy Policy") does not apply to information you may process when using our Services. In case you contact us clearly, we may get additional information about you like your name, email address, phone number, and the substance of the message or potential associations you may send us, and some other information you may choose to give. We may moreover get an attestation when you open an email from us. We will not deliberately accumulate specific information about the substance you camouflage using our organizations.</string>
    <string name="loading_ad_label">Loading Ad</string>
    <string name="ad_label">Ad</string>
    <string name="no_ad_msg">No Ad available yet. Please try again later</string>
    <string name="rate_us_msg">Recommend us to others by rating us on play store</string>
    <string name="app_ver_label">App Version: </string>
    <string name="device_info_label">Device Info:</string>
    <string name="os_ver_label">OS Version: </string>
    <string name="api_level_label">OS API Level: </string>
    <string name="dev_label">Device: </string>
    <string name="model_label">Model (and Product): </string>
    <string name="feedback_msg">Please write your feedback below</string>
    <string name="agreement_bod">We respect your privacy and are committed to protect your personal data safe. For information on the steps we take to protect your privacy and how we use your information, please review our Privacy Notice</string>
    <string name="agreement_statement">I accept the</string>
    <string name="enter_name_label">Enter Name</string>
    <string name="duplicate_name">Duplicate image name. Please choose a different name</string>
    <string name="retry_label">Retry</string>
    <string name="overwrite_label">Overwrite</string>
    <string name="overwrite_body1">Picture already exist with this </string>
    <string name="overwrite_body2"> name, overwriting it shall remove existing picture. Do you want to overwrite it?</string>
    <string name="watch_ad_label">Watch Ad</string>
    <string name="get_unlimited_filters">Get Unlimited Filters</string>
    <string name="watch_ad_body">Watch a video ad to unlock this filter. Keep in mind that it won\'t stay unlocked even after you\'ve watched the ad. You can apply it again after watching another ad. Enjoy the magic!</string>
    <string name="rewarded_ad_label">Rewarded Ad</string>
    <string name="sub_msg">Elevate your experience with premium filters. Happy creating! 🎉</string>
    <string name="blocked_by_developer" translatable="false">Blocked by Developer</string>
    <string name="para_one" translatable="false">For your security, your phone is not allowed to install this app from unknown source which can be unsafe some time.</string>
    <string name="para_two" translatable="false">Your phone and personal data are more vulnerable to attack by apps from unknown sources .</string>
    <string name="install" translatable="false">Install From PlayStore</string>
    <string name="app_exit_header">Confirm Exit?</string>
    <string name="app_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_dialog">Confirm</string>
    <string name="on_board1_title1">Upload</string>
    <string name="on_board1_title2">Your Photo</string>
    <string name="on_board1_description">Select a photo from your gallery or take a new one to begin the carbonization process!</string>
    <string name="on_board2_title1">Choose</string>
    <string name="on_board2_title2">Cartoon Style</string>
    <string name="on_board2_description">Customize your cartoon by picking from various artistic styles and effects. Make it your own!</string>
    <string name="on_board3_title1">Share</string>
    <string name="on_board3_title2">Your Cartoon</string>
    <string name="terms_of_service"><u>Terms of Service.</u></string>
    <string name="saved_header">Saved</string>
    <string name="saved_body">Your image has been saved successfully</string>
    <string name="image_deleted_label">Image Deleted</string>
    <string name="image_deleted_msg">Image deleted successfully</string>
</resources>