<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_dialog_bg">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_saved"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/saved_header"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/saved_body"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_below="@+id/ll_content"
        android:visibility="visible"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/white_border_bg"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/exit_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="0.5"
            android:background="@drawable/dialog_btn_bg"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/continue_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>