<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyishBlack">

    <LinearLayout
        android:id="@+id/ll_bgTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_5sdp"
        android:background="@drawable/top_rounded_new"
        android:backgroundTint="@color/lightnewYellow"
        android:orientation="horizontal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_imageDelConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/greyishBlack"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardMaxElevation="@dimen/_7sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/del_img_header"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/del_img_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:id="@+id/ll_actionButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                android:visibility="visible"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/ll_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/white_border_bg"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/tv_btnLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/cancel_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_btn_bg"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/tv_btnRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/delete_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_imageDelSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/greyishBlack"
        app:cardCornerRadius="@dimen/_3sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_image_success" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/image_deleted_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/image_deleted_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:id="@+id/ll_done"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/dialog_btn_bg"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/ok_label"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>